# 2048cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
inc/: Color.hpp  GameBoard.hpp  InputReader.hpp  Menu.hpp  MenuManager.hpp  OptionMenu.hpp  Resources.hpp  ScoreBoard.hpp  Timer.hpp  mainmenu.hpp
inc/user-save/: HighScore.hpp  Tables.hpp
src/: Color.cpp  GameBoard.cpp  InputReader.cpp  Menu.cpp  MenuManager.cpp  OptionMenu.cpp  ScoreBoard.cpp  main.cpp  mainmenu.cpp
test/: sqlite-orm-test.cpp  test1.cpp  test2.cpp  test3.cpp
